fix: add text wrap to review card

--- a/client/src/components/ReviewCard/ReviewCard.module.css
+++ b/client/src/components/ReviewCard/ReviewCard.module.css
@@ -128,6 +128,8 @@
     width: 95%;
     text-align: left;
     margin-top: 8px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 .isEdited {
